# AscendOpGenAgent

./: .gitignore  README.en.md  README.md  settings.json
.autoresearch/: config.yaml
.autoresearch/scripts/: _baseline_init.py  baseline.py  correctness.py  create_plan.py  dashboard.py  eval_kernel.py  eval_runner.py  eval_wrapper.py  hook_guard_bash.py  hook_guard_edit.py  hook_post_bash.py  hook_post_edit.py  keep_or_discard.py  parse_args.py  pipeline.py  quick_check.py  report.py  resume.py  scaffold.py  settings.py  settle.py
.autoresearch/scripts/batch/: discover.py  manifest.py  monitor.py  prepare.py  run.py  summarize.py  verify.py
.autoresearch/scripts/phase_machine/: __init__.py  guidance.py  models.py  state_store.py  validators.py
.autoresearch/scripts/task_config/: __init__.py  eval_client.py  loader.py  metric_policy.py
.autoresearch/scripts/workflow/: __init__.py  baseline.py  round.py  transition.py
agents/: AKG-triton.md  ascend-kernel-developer.md  benchmark-scheduler.md  lingxi_code.md  performance-optimizer.md  triton-ascend-coder.md
akg-triton/.opencode/agents/: AKG-triton.md  kernelgen-workflow.md
archive_tasks/4_Abs/: .last_ascendc_eval.summary  .last_performance.summary  model_new_ascendc.py  preformance.json  trace.md
archive_tasks/4_Abs/design/: design.md
archive_tasks/4_Abs/kernel/: CMakeLists.txt  ops.h  register.cpp  setup.py
archive_tasks/avg_pool3_d/: model.py  model_new_ascendc.py  model_new_tilelang.py
archive_tasks/avg_pool3_d/kernel/: CMakeLists.txt  avg_pool3_d_generic.cpp  avg_pool3_d_generic_kernel.h  avg_pool3_d_multi_w.cpp  avg_pool3_d_reduce_d.cpp  avg_pool3_d_reduce_d_kernel.h  avg_pool3_d_split_c.cpp  avg_pool3_d_split_w.cpp  avg_pool3_d_split_w_kernel.h  design.md  kernel_common.h  ops.h  pybind11.cpp  register.cpp
archive_tasks/avg_pool3_d/kernel/op_host/: avg_pool3_d.cpp
archive_tasks/avg_pool3_d/kernel/op_kernel/: avg_pool3_d_generic.cpp  avg_pool3_d_multi_w.cpp  avg_pool3_d_multi_w_kernel.h  avg_pool3_d_reduce_d.cpp  avg_pool3_d_split_c.cpp  avg_pool3_d_split_c_kernel.h  avg_pool3_d_split_w.cpp  avg_pool3_d_tiling.h
archive_tasks/concat_dv2/: model_new_ascendc.py
archive_tasks/concat_dv2/kernel/: CMakeLists.txt  build.sh  ops.h  register.cpp
archive_tasks/concat_dv2/kernel/op_host/: concat_dv2.cpp
archive_tasks/concat_dv2/kernel/op_kernel/: concat_dim0_1.cpp  concat_dim0_2.cpp  concat_dim0_3.cpp  concat_dim0_4.cpp  concat_dim0_kernel_common.h
archive_tasks/concat_dv2/kernel/utils/: torch_kernel_helper.h
archive_tasks/matmul_leakyrelu/: model.py  model_new_ascendc.py  model_new_tilelang.py
archive_tasks/matmul_leakyrelu/kernel/: kernel_common.h  leakyrelu.h  matmul.h  matmul_leakyrelu.h  matmul_leakyrelu_fp16.cpp  matmul_leakyrelu_int8.cpp  matmul_leakyrelu_tiling.h  matmul_tile.h  pybind11.cpp  workspace_queue.h
archive_tasks/quant_matmul/: model_new_ascendc.py
archive_tasks/quant_matmul/kernel/: CMakeLists.txt  ops.h  register.cpp  setup.py
archive_tasks/quant_matmul/kernel/op_host/: quant_matmul.cpp
archive_tasks/quant_matmul/kernel/op_kernel/: quant_matmul.cpp
archive_tasks/reshape_matmul_rowwise_quant_int8/: model_new_ascendc.py
archive_tasks/reshape_matmul_rowwise_quant_int8/kernel/: CMakeLists.txt  ops.h  register.cpp  setup.py
archive_tasks/rms_norm/: .last_ascendc_eval.summary  model.py  model_new_ascendc.py  model_new_tilelang.py
archive_tasks/rms_norm/kernel/: CMakeLists.txt  build.sh  ops.h  pybind11.cpp  register.cpp  rms_norm_merge_n.cpp  rms_norm_merge_n_bf16.cpp  rms_norm_merge_n_fp16.cpp  rms_norm_merge_n_kernel.h  rms_norm_single_row.cpp  rms_norm_single_row_bf16.cpp  rms_norm_single_row_fp16.cpp  rms_norm_single_row_kernel.h  rms_norm_splitd.cpp  rms_norm_splitd_bf16.cpp  rms_norm_splitd_fp16.cpp  rms_norm_splitd_kernel.h  rms_norm_tiling.h  setup.py
archive_tasks/sort/: model_new_ascendc.py
archive_tasks/sort/kernel/: CMakeLists.txt  ops.h  register.cpp  setup.py
archive_tasks/top_k_top_p_sample/: model.py  model_new_ascendc.py  model_new_tilelang.py
archive_tasks/top_k_top_p_sample/kernel/: kernel_common.h  pybind11.cpp  top_k_top_p_sample_bf16.cpp  top_k_top_p_sample_fp16.cpp  top_k_top_p_sample_tiling.h
benchmarks/: BASELINE_0327.md  BASELINE_latest.md
benchmarks/NPUKernelBench/level1/: 11_GroupNorm.py  25_NLLLoss.py  28_Interpolate.py  31_IOU.py
benchmarks/NPUKernelBench/level2/: 10_SwigluQuant.py  11_DequantSwigluQuant.py  12_KvRmsnormRopeCache.py  13_InterleaveRope.py  14_AdaptiveInstanceNormalization2DBackward.py  15_AttentionSoftmaxWithSoftcappingAndDropout.py  16_Batched2DRopePositionEncodingBackward.py  17_EmbeddingWithInitialLayernormBackward.py  18_FusedAddRmsnorm.py  19_FusedResidualRmsNormBackward.py  1_RotaryMul.py  20_FusedRopeWithQkNormAndKvCacheUpdate.py  21_GaussianTopkSparseActivation.py  22_HybridAttentionMaskPreparation.py  23_HyenaFftSizePaddingRfft.py  24_KvCacheUpdateWithRopeBackward.py  25_MaskedSoftmaxWithAttentionDropoutBackward.py  26_MoeGroupScoreAggregationAndMasking.py  27_MultiMaskAttentionAggregation.py  28_MultimodalRopePositionComputationWithGridBasedIndexing.py  29_TanhGatedResidualAddBackward.py  2_GroupNormSwish.py  30_TimeDecayExponentialStabilization.py  3_AdvanceStepFlashattn.py  4_MoeComputeExpertTokens.py  5_MoeInitRouting.py  6_MoeFinalizeRouting.py  7_MoeGatingTopKSoftmax.py  8_QuantScatter.py  9_TopKTopP.py
benchmarks/level430/: 17_LogAddExp.py
docs/: AUTORESEARCH.md
hooks/: skill_script_hook.py
setups/autoresearch/: CLAUDE.md  settings.json
setups/autoresearch/commands/: autoresearch.md
skills/ascendc/ascendc-code-gen/: SKILL.md
skills/ascendc/ascendc-operator-project-init/: SKILL.md
skills/ascendc/ascendc-translator/: SKILL.md
skills/ascendc_evalution/: SKILL.md
skills/benchmark-evaluator/: SKILL.md  evaluator.py
skills/dsl_optimization/: SKILL.md
skills/kernel-generator/: SKILL.md
skills/kernel-verifier/: SKILL.md
skills/latency-optimizer/: SKILL.md
utils/: build_ascendc.py  implementation_check.py  performance.py  run_benchmark_triton.sh  verification_ascendc.py
(+60 files in other folders)
